--- a/netflix-clone/package.json
+++ b/netflix-clone/package.json
@@ -1,14 +1,13 @@
 {
- "homepage": "https://EleniZebibuMkiru.github.io/netflix_clone_2025",
-
+  "homepage": "https://EleniZebibuMkiru.github.io/netflix_clone_2025",
   "name": "netflix-clone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -32,7 +31,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
-    "github-pages": "^3.0.2",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "vite": "^7.2.4"
   }
